# universal-model-registry

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.updater  Makefile  README.md  main.py  models_data.py  pyproject.toml  railway.toml  registry.py  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: auto-merge.yml  auto-update.yml  ci.yml  go-ci.yml  update-check.yml
configs/: claude_mcp.json  codex_config.toml  cursor_mcp.json  opencode_mcp.json  railway-updater.toml  windsurf_mcp.json
docs/: INSTALL.md  feature-improvements-report.md  model-audit-report.md
docs/plans/: 2026-02-09-registry-expansion.md
go-server/: Dockerfile  Makefile  README.md  go.mod
go-server/cmd/server/: main.go  main_test.go
go-server/cmd/updater/: main.go  main_test.go
go-server/internal/middleware/: ratelimit.go  ratelimit_test.go
go-server/internal/models/: data.go  data_test.go  models.go
go-server/internal/resources/: resources.go  resources_test.go
go-server/internal/tools/: compare.go  helpers.go  info.go  list.go  recommend.go  search.go  status.go  tools_test.go
scripts/: validate_models.py
skills/lookup/: SKILL.md
tests/: conftest.py  test_edge_cases.py  test_registry.py
